# cfxx

./: .gitignore  CMakeLists.txt  README.md  build.sh  cfxx.h  cfxx_base.h  cfxx_data.h  cfxx_string.h  test.cpp
cfxx/: cfxx.h  cfxx_base.h  cfxx_data.h  cfxx_string.h
tests/: CMakeLists.txt  StringTests.cpp  TypeCheckingTests.cpp
